--- a/Praktikum_2/gaya.css
+++ b/Praktikum_2/gaya.css
@@ -38,6 +38,7 @@ body {
     box-shadow: 0 0 25px var(--main-color);
     transition: 0.4s ease-in-out;
 }
+
 .avatar img:hover{
     box-shadow: 0 0 25px var(--main-color),
                 0 0 50px var(--main-color),
@@ -142,8 +143,8 @@ body {
 
 
 ul {
-    list-style: none;   /* Removes bullet points */
-    padding: 0;         /* Removes default padding */
+    list-style: none;   
+    padding: 0;         
 }
 
 /* STYLE CONTACT */
