--- a/Praktikum_3/style.css
+++ b/Praktikum_3/style.css
@@ -13,8 +13,10 @@ body {
     width: 70%;
     margin: 20px auto;
     padding: 0 20px 20px 40px; 
+    transition: o.4 ease-in-out;
     border: 5px solid black;
-    background-color: var(--bg-color);
+    background-color: white;
+    color: black;
     font-family: "Poppins";
     border: 5px solid var(--main-color);
 }
@@ -132,7 +134,6 @@ ul {
     border: 1px solid var(--bg-color);
     border-left: 5px solid var(--bg-color);
     transition: 0.4s ease-in-out;
-    /* position: relative; */
     text-align: left;
     display: flex;
 
@@ -168,7 +169,7 @@ ul {
 }
 
 button#add-project {
-    width: 60px; /* Lebar dan tinggi disesuaikan agar tombol berbentuk lingkaran sempurna */
+    width: 60px; 
     height: 60px;
     font-size: 30px;
     background-color: white;
@@ -198,13 +199,10 @@ button#add-project:hover {
 
 /* Dark mode styles */
 body.dark-mode {
+    transition: 0.4 ease-in-out;
     background-color: #000000;
     color: white;
-}
-
-
-body.dark-mode a {
-    color: lightblue;
+    border: 5px solid white;
 }
 
 .controls {
